# VisualExercises

./: .gitignore  CMakeLists.txt
Test/: CMakeLists.txt
Test/src/: DependencyTest.cpp  MapBenchmark.cpp  TempTest.cpp  main.cpp
VeLib/: CMakeLists.txt
VeLib/include/os/: SleepFix.hpp
VeLib/include/ve/Dependency/: DependencyContainer.hpp  Interface.hpp  InterfaceName.hpp
VeLib/include/ve/Engine/: EntityManager.hpp  Game.hpp
VeLib/include/ve/Helper/: Log.hpp
VeLib/include/ve/Rendering/: Drawable.hpp
VeLib/include/veng/Base/: Game.h
VeLib/pd/unix/: SleepFixImpl.hpp
VeLib/pd/windows/: SleepFixImpl.cpp  SleepFixImpl.hpp  WinSleepUnfucker.cpp  WinSleepUnfucker.hpp
VeLib/src/Base/: Game.cpp
VeLib/src/Dependency/: DependencyContainer.cpp
VeLib/src/Engine/: Game.cpp
VeLibrary/: CMakeLists.txt
VeLibrary/include/ve/dev/: BouncyRectangle.hpp
VeLibrary/include/ve/engine/: Entity.hpp
VeLibrary/include/ve/render/: Renderer.hpp
VeLibrary/src/dev/: BouncyRectangle.cpp
VeLibrary/src/render/: Renderer.cpp
VisualExercises/: CMakeLists.txt  main.cpp
VisualExercises/include/: Base.h  DrawableManager.hpp  Entity.h  EntityManager.h  EntityManager.hpp  Game.h  Game.hpp  Renderer.h
VisualExercises/include/Engine/: Base.hpp  Drawable.hpp
VisualExercises/include/ve/Engine/: Entity.hpp
VisualExercises/include/ve/Helper/: Math.hpp
VisualExercises/include/ve/Rendering/: DrawableManager.hpp
VisualExercises/pd/: WinSleepUnfucker.cpp
VisualExercises/src/: DrawableManager.cpp  EntityManager.cpp  Game.cpp  Renderer.cpp  Sparkler.hpp  main.cpp
VisualExercises/src/Engine/: Drawable.cpp  EntityManager.cpp
VisualExercises/src/Helper/: Log.cpp  Math.cpp
VisualExercises/src/Rendering/: Drawable.cpp  DrawableManager.cpp
VisualExercises/src/TestEntities/: Sparkler.hpp
